<resources>
    <string name="app_name">Edit Your Text</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_editing">Editing</string>
    <string name="headind">Editor</string>
    <string name="input">Text Input:</string>
    <string name="col">Colour :</string>
    <string name="siz">Size :</string>
    <string name="fon">Font :</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>
    <string name="finalText">Large Text</string>
    <string-array name="colors_array">
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>White</item>
    </string-array>
    <string-array name="size_array">
        <item>12</item>
        <item>18</item>
        <item>24</item>
        <item>36</item>
        <item>48</item>
    </string-array>
    <string-array name="font_array">
        <item>Arial</item>
        <item>Times New Roman</item>
    </string-array>
</resources>
